구현체 추가 및 수정